# kodex

./: .gitignore  BUILD.md  BUILD_AND_RELEASE_CHECKLIST.md  CHANGELOG.md  KodexInstaller.ahk  MIGRATION_GUIDE.md  MIGRATION_PR_TEMPLATE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v2.0.0.md  RELEASE_QUICK_START.md  RELEASE_SYSTEM_SETUP.md  TICKET_TRACKER_README.md  build.bat  build.ps1  build_embedded.py  export.ahk  import.ahk  kodex.ahk  kodex.ini  printable.ahk  pyproject.toml  smoke_test.ahk  test_results.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  ci.yml  notify-silas.yml  release.yml  stale.yml
extensions/chrome/: README.md  background.js  com.kodex.context.json  content_csr.js  content_freshdesk.js  content_gt3.js  install_host.bat  manifest.json  native_host.bat  popup.html  popup.js
includes/GUI/: about_GUI.ahk  disablechecks.ahk  help_GUI.ahk  management_GUI.ahk  newkey_GUI.ahk  preferences_GUI.ahk  textprompt_GUI.ahk  traymenu_GUI.ahk
includes/functions/: InsSpecKeys.ahk  InstallAutocorrect.ahk  MonitorWindows.ahk  addtobank.ahk  autoclose.ahk  autocorrect.ahk  buildactive.ahk  bundles.ahk  delfrombank.ahk  disable.ahk  enabletriggers.ahk  getfilelist.ahk  getvalfromini.ahk  hexall.ahk  hexify.ahk  printablelist.ahk  urls.ahk  (+5 more)
launcher/: kodex.go
tests/: test_bundle_io.py  test_cheatsheet.py  test_cli_new.py  test_database.py  test_executor.py  test_hex_codec.py  test_matcher.py  test_migration.py  test_ticket_tracker.py  test_variables.py
(+25 files in other folders)
